compiler-core/src/go/tests/snapshots/gleam_core__go__tests__lists__case.snap
---
source: compiler-core/src/go/tests/lists.rs
expression: "\nfn go(xs) {\n  case xs {\n    [] -> 0\n    [_] -> 1\n    [_, _] -> 2\n    _ -> 9999\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(xs) {
  case xs {
    [] -> 0
    [_] -> 1
    [_, _] -> 2
    _ -> 9999
  }
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ[L gleam_P.Type[L]](xs gleam_P.List_t[L]) gleam_P.Int_t {
  if xs.HasLength(0) {
    return 0
  } else if xs.HasLength(1) {
    return 1
  } else if xs.HasLength(2) {
    return 2
  } else {
    return 9999
  }
}
