compiler-core/src/go/tests/snapshots/gleam_core__go__tests__lists__list_literals.snap
---
source: compiler-core/src/go/tests/lists.rs
expression: "\nfn go(x) {\n    []\n    [1]\n    [1, 2]\n    [1, 2, ..x]\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x) {
    []
    [1]
    [1, 2]
    [1, 2, ..x]
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ(x gleam_P.List_t[gleam_P.Int_t]) gleam_P.List_t[gleam_P.Int_t] {
  _ = gleam_P.ToList[gleam_P.Type]()
  _ = gleam_P.ToList[gleam_P.Int_t](1)
  _ = gleam_P.ToList[gleam_P.Int_t](1, 2)
  return gleam_P.ListPrepend[gleam_P.Int_t](
    1,
    gleam_P.ListPrepend[gleam_P.Int_t](2, x),
  )
}
